Bug 797013 - CheckInterfaceSupport fails on some hardware in metrofx. Do not rely on it. r=bas